--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,11 @@ body {
   width: 100%;
   border-radius: 5px;
 }
-@media only screen and (max-width: 425px) {
+h2{
+  display: flex;
+  justify-content: center;
+}
+@media only screen and (max-width: 768px) {
   .main {
     flex-direction: column;
   }
